Increase .cardText-secondary height from 3em to 4em to fix cutoff

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -215,7 +215,7 @@ div[data-role=controlgroup] a.ui-btn-active {
 
 .localUsers .cardText-secondary {
     white-space: pre-wrap;
-    height: 3em;
+    height: 4em;
 }
 
 .customCssContainer textarea {
